cmake_minimum_required(VERSION 3.16)
project(elements)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set(CMAKE_BUILD_TYPE DEBUG)
set(LOCAL_UNIX_INCLUDE /usr/local/include)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)
include_directories(vendor)
set(SOURCES src/main.cc src/audio.cc src/ranking.cc src/graphics.cc src/physics.cc src/client.cc  vendor/json.cc vendor/wslib.cc)
set(INCLUDE include/utils.h include/audio.h include/ranking.h include/elements.h include/graphics.h include/physics.h include/client.h vendor/tree.h vendor/json.h vendor/httplib.h vendor/wslib.h)
add_executable(elements ${SOURCES} ${INCLUDE})
